src/test/deca/syntax/parser/invalid/field_definition_visibility_unknown.deca
// Test parser, déclaration d'une méthode avec une visibilité
// inconnue

class myClass {
    unprotected int x = 12;
}